--- a/Develop/assets/style.css
+++ b/Develop/assets/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Mochiy Pop One', sans-serif;
 }
 
-.login-form-box {
+.login-form-box, .signup-form-box {
     display: flexbox;
     align-content: center;
     border-style: inset;
@@ -12,7 +12,7 @@ body {
     padding: 40px;
     padding-right: 30px;
     margin-top: 30px;
-    margin-bottom: 20%;
+    margin-bottom: 5%;
     background-color: white;
     border-radius: 8px;
 }
@@ -31,7 +31,8 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 6%;
+    margin-bottom: 5%;
 }
 
 #title {
@@ -39,8 +40,13 @@ body {
 }
 
 
+#signup-text {
+    margin-left: 40%;
+    font-size: 20px;
+}
+
 #login-text {
-    margin-left: 15%;
+    margin-left: 45%;
     font-size: 20px;
 }
 
