--- a/Develop/views/login.handlebars
+++ b/Develop/views/login.handlebars
@@ -1,19 +1,59 @@
-<h2>User Login</h2>
+<div class="title-text">
+    <h1 id="title"> Photo Social Media </h1>
+    <p id="login-text"> Log in to get started! </p>
+</div>
 
-<form class="">
-  <div class="">
-    <label for="">email?</label>
-    <input class="" type="text" id="" />
-  </div>
-  <div class="">
-    <label for="">password:</label>
-    <input class="" type="" id="" />
-  </div>
-  <div class="">
-    <button class="" type="">login</button>
-  </div>
-</form>
+<!--for signup form/div-->
+<div class="signup-form-box">
+    <form class="form-horizontal">
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" placeholder="Create username">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="Create password">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Sign up</button>
+          </div>
+        </div>
+      </form> 
 
-<script src=""></script>
-<script src=""></script>
-<script src=""></script>
+<!--for login form/div-->
+<div class="login-form-box">
+    <form class="form-horizontal">
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Sign in</button>
+          </div>
+        </div>
+      </form> 
+</div>
+
+<script src="/project2/Develop/public/js/login.js"></script>
