--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -5,22 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
-  <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="/Develop/assets/style.css">
 </head>
 
 <body>
-  <header class="">
+  <header class="title-text">
     <h1>
       Title Here Too
     </h1>
     
     {{#if logged_in}}
     <nav>
-      <button class="" id="">logout</button>
+      <button class="btn-default" id="">logout</button>
     </nav>
     {{/if}}
   </header>
-  <main class="">
+  <main class="user-profile">
     {{{ body }}}
   </main>
   <footer>     
