--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each  as || }}
-<div class="">
+<div class="title-text", id="title">
   <div class="">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
+    <h2></h2>
   </div>
   <div class="">
     <h3></h3>
