--- a/Develop/views/login.handlebars
+++ b/Develop/views/login.handlebars
@@ -1,8 +1,8 @@
 <h2>User Login</h2>
 
-<form class="">
+<form class="login-form-box">
   <div class="">
-    <label for="">email?</label>
+    <label for="form-label">email?</label>
     <input class="" type="text" id="" />
   </div>
   <div class="">
