--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="/project2/assets/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel= "stylesheet" href="/project2/assets/style.css">
+    <title> Profile Page </title>
 </head>
 
 <body>
-  <header class="">
-    <h1>
-      Title Here Too
-    </h1>
-    
-    {{#if logged_in}}
-    <nav>
-      <button class="" id="">logout</button>
-    </nav>
-    {{/if}}
-  </header>
-  <main class="">
-    {{{ body }}}
-  </main>
-  <footer>     
-  </footer>
-
-  {{#if logged_in}}
-  <script src=""></script>
-  {{/if}}
+    <div class="logo">
+        <h2> Logo </h2>
+    </div>
+<header>
+  {{#if loggedIn}}
+    <div class="user-profile">
+        <h2> User Name </h2>   
+        <p> User Bio </p> 
+    </div>
+    <div class="friend-button">
+        <button type="button" class="btn btn-warning"> Add Friend </button>
+    </div>
+</header>
+<div class="photo-upload">
+    <label for="formFileDisabled" class="form-label"> Upload Your Photos!</label>
+    <input class="form-control" type="file" id="formFileDisabled" disabled />
+</div>
+<div class="row align-items-center">
+    <div class="col">
+      Photo
+    </div>
+    <div class="col">
+      Photo
+    </div>
+    <div class="col">
+      Photo
+    </div>
+    <div class="col">
+        Photo
+    </div>
+    <div class="col">
+        Photo
+    </div>
+    <div class="col">
+        Photo
+    </div>
+</div>
 </body>
 
 </html>
