--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="logo">
-        <h2> Logo </h2>
+    <div>
+        <h2 class="logo"> 📷 </h2>
     </div>
 <header>
   {{#if loggedIn}}
