--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,8 @@ body {
 }
 
 .logo {
-    margin-left: 2%;
+    margin-left: 5%;
+    zoom: 240%;
 }
 
 header {
@@ -59,15 +60,8 @@ header {
     flex-direction: row;
 }
 
-.album-boxes {
-    display: flex;
-    flex-direction: row;
-    margin-left: 3.5%;
-}
-
 .user-profile {
     margin-left: 6%;
-    margin-top: 5%;
     background-color: aliceblue;
     width: 60%;
     padding: 5px;
