--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 <div class="title-text">
-    <h1 id="title"> Photo Social Media </h1>
+    <h1 id="title"> Shutter Up </h1>
     <p id="login-text"> Log in to get started! </p>
 </div>
 
 <body>
 <!--application title/graphics-->
 <div class="title-text">
-    <h1 id="title"> Photo Social Media </h1>
+    <h1 id="title"> Shutter Up </h1>
 </div>
 
 <!--for signup form/div-->
