--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,14 @@
-{{#each  as || }}
-<div class="">
+{{#each userData as |userData|}}
   <div class="">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
+    <div class="">
+      <h2>{{{get_emoji}}} {{user.name}}</h2>
+    </div>
+    <div class="">
+      <h3></h3>
+      <h3></h3>
+      <h3></h3>
+      <h3></h3>
+      <h3></h3>
+    </div>
   </div>
-  <div class="">
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-  </div>
-</div>
 {{/each}}
