--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aquamarine;
+    background-color: rgba(255, 146, 12, 0.975);
     font-family: 'Mochiy Pop One', sans-serif;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 .btn-default {
-    background-color: rgb(233, 173, 61);
+    background-color: rgb(21, 195, 169);
     color:aliceblue;
 }
 
@@ -103,7 +103,7 @@ header {
     padding: 10%;
     border-radius: 8px;
     border-style: inset;
-}
+};
 
 
 
