--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,22 @@
-<div class="title-text">
-    <h1 id="title"> Shutter Up </h1>
-    <p id="login-text"> Log in to get started! </p>
-</div>
+{{!-- add api route for login --}}
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel= "stylesheet" href="/public/css/style.css">
+    <title> Login Page </title>
+</head>
 <body>
 <!--application title/graphics-->
 <div class="title-text">
-    <h1 id="title"> Shutter Up </h1>
+    <h1 id="title">  📷  Shutter Up! 📷  </h1>
 </div>
 
 <!--for signup form/div-->
@@ -16,7 +26,7 @@
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Create username">
+          <input type="input" class="form-control" id="inputEmail3" placeholder="Create username">
         </div>
       </div>
       <div class="form-group">
@@ -44,7 +54,7 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+            <input type="input" class="form-control" id="inputEmail3" placeholder="Username">
           </div>
         </div>
         <div class="form-group">
@@ -66,4 +76,5 @@
 </div>
 </body>
 
-<script src="/project2/Develop/public/js/login.js"></script>
+<script src="/public/js/login.js"></script>
+</html>
