--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <h2 class="logo"> 📷 </h2>
+        <h4 class="logo"> 📷  Shutter Up! </h4>
     </div>
 <header>
   {{#if loggedIn}}
