--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,38 +1,17 @@
-{{!-- add api route for login --}}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="/public/css/style.css">
-    <title> Login Page </title>
-</head>
-<body>
-<!--application title/graphics-->
-<div class="title-text">
-    <h1 id="title">  📷  Shutter Up! 📷  </h1>
-</div>
-
-<!--for signup form/div-->
 <h3 id="signup-text">Create a Profile Below:</h3>
 <div class="signup-form-box">
   <form class="form-horizontal">
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <input type="input" class="form-control" id="inputEmail3" placeholder="Create username">
+          <input type="input" class="form-control" id="username-signup" placeholder="Create username">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Create password">
+          <input type="password" class="form-control" id="password-signup" placeholder="Create password">
         </div>
       </div>
       <div class="form-group">
@@ -54,13 +33,13 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
           <div class="col-sm-10">
-            <input type="input" class="form-control" id="inputEmail3" placeholder="Username">
+            <input type="input" class="form-control" id="username-login" placeholder="Username">
           </div>
         </div>
         <div class="form-group">
           <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
           <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            <input type="password" class="form-control" id="password-login" placeholder="Password">
           </div>
         </div>
         <div class="form-group">
@@ -74,7 +53,6 @@
         </div>
       </form> 
 </div>
-</body>
 
 <script src="/public/js/login.js"></script>
-</html>
+
