edit routing for login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,9 +25,9 @@
     </div>
 
     {{#if loggedIn}}
-      <a href="/homepage"></a>
+      <a href="/views/homepage.handlebars"></a>
     {{else}}
-      <a href="/login"></a>
+      <a href="/views/login.handlebars"></a>
     {{/if}}
 
     {{{body}}}
