added photos to homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,22 +10,22 @@
 </div>
 <div class="row align-items-center">
     <div class="col">
-      Photo
+      <img src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach">
     </div>
     <div class="col">
-      Photo
+      <img src="../assets/images/02-aspen-leaves.jpg" alt="Aspen leaves">
     </div>
     <div class="col">
-      Photo
+      <img src="../assets/images/03-dog.jpg" alt="Dog">
     </div>
     <div class="col">
-        Photo
+        <img src="../assets/images/04-sloth.jpg" alt="Sloth hanging from tree branch">
     </div>
     <div class="col">
-        Photo
+        <img src="../assets/images/05-kaleidscope.jpg" alt="Kaleidoscope">
     </div>
     <div class="col">
-        Photo
+        <img src="../assets/images/06-bird.jpg" alt="Bird">
     </div>
 </div>
 </body>
