--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,32 +1,35 @@
 <body>
-<header>
+  <header>
     <div class="user-profile">
-        <h2> User Name </h2>   
+      <h2> Welcome To Your Photo Gallery! </h2>
     </div>
-</header>
-<div class="photo-upload">
-    <label for="formFileDisabled" class="form-label"> Upload Your Photos!</label>
+  </header>
+  <div class="photo-upload">
+    <label for="formFileDisabled" class="form-label">
+      Upload Your Photos!</label>
     <input class="form-control" type="file" id="formFileDisabled" disabled />
-</div>
-<div class="row align-items-center">
+  </div>
+  <div class="row align-items-center">
     <div class="col">
-      <img src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach">
+      <img src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach" />
     </div>
     <div class="col">
-      <img src="../assets/images/02-aspen-leaves.jpg" alt="Aspen leaves">
+      <img src="../assets/images/02-aspen-leaves.jpg" alt="Aspen leaves" />
     </div>
     <div class="col">
-      <img src="../assets/images/03-dog.jpg" alt="Dog">
+      <img src="../assets/images/03-dog.jpg" alt="Dog" />
     </div>
     <div class="col">
-        <img src="../assets/images/04-sloth.jpg" alt="Sloth hanging from tree branch">
+      <img
+        src="../assets/images/04-sloth.jpg"
+        alt="Sloth hanging from tree branch"
+      />
     </div>
     <div class="col">
-        <img src="../assets/images/05-kaleidscope.jpg" alt="Kaleidoscope">
+      <img src="../assets/images/05-kaleidscope.jpg" alt="Kaleidoscope" />
     </div>
     <div class="col">
-        <img src="../assets/images/06-bird.jpg" alt="Bird">
+      <img src="../assets/images/06-bird.jpg" alt="Bird" />
     </div>
-</div>
+  </div>
 </body>
-
