--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ header {
 
 .align-items-center {
     margin-right: 5%;
-    margin-left: -3%;
+    margin-left: 3%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
@@ -106,6 +106,8 @@ header {
     padding: 10%;
     border-radius: 8px;
     border-style: inset;
+    width: 27%;
+    height: 27%;
 };
 
 
