edit photo link

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,25 +11,25 @@
   </div>
   <div class="row align-items-center">
     <div class="col">
-      <img src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach" />
+      <img src="https://i.imgur.com/CG1DxZd.jpeg" alt="Squirrel" />
     </div>
     <div class="col">
-      <img src="../assets/images/02-aspen-leaves.jpg" alt="Aspen leaves" />
+      <img src="https://i.imgur.com/Q4SV0zU.jpeg" alt="Aspen leaves" />
     </div>
     <div class="col">
-      <img src="../assets/images/03-dog.jpg" alt="Dog" />
+      <img src="https://i.imgur.com/A8eQsll.jpeg" alt="Dog" />
     </div>
     <div class="col">
       <img
-        src="../assets/images/04-sloth.jpg"
+        src="https://i.imgur.com/oPXo3kl.jpeg"
         alt="Sloth hanging from tree branch"
       />
     </div>
     <div class="col">
-      <img src="../assets/images/05-kaleidscope.jpg" alt="Kaleidoscope" />
+      <img src="https://i.imgur.com/t8YeaGV.png" alt="Kaleidoscope" />
     </div>
     <div class="col">
-      <img src="../assets/images/06-bird.jpg" alt="Bird" />
+      <img src="https://i.imgur.com/zfOPmnI.jpeg" alt="Bird" />
     </div>
   </div>
 </body>
