--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,26 +10,35 @@
     <input class="form-control" type="file" id="formFileDisabled" disabled />
   </div>
   <div class="row align-items-center">
-    <div class="col">
-      <img src="https://i.imgur.com/CG1DxZd.jpeg" alt="Squirrel" />
+    <div>
+      <img class="col" src="https://i.imgur.com/CG1DxZd.jpeg" alt="Squirrel" />
     </div>
-    <div class="col">
-      <img src="https://i.imgur.com/Q4SV0zU.jpeg" alt="Aspen leaves" />
-    </div>
-    <div class="col">
-      <img src="https://i.imgur.com/A8eQsll.jpeg" alt="Dog" />
-    </div>
-    <div class="col">
+    <div>
       <img
+        class="col"
+        src="https://i.imgur.com/Q4SV0zU.jpeg"
+        alt="Aspen leaves"
+      />
+    </div>
+    <div>
+      <img class="col" src="https://i.imgur.com/A8eQsll.jpeg" alt="Dog" />
+    </div>
+    <div>
+      <img
+        class="col"
         src="https://i.imgur.com/oPXo3kl.jpeg"
         alt="Sloth hanging from tree branch"
       />
     </div>
-    <div class="col">
-      <img src="https://i.imgur.com/t8YeaGV.png" alt="Kaleidoscope" />
+    <div>
+      <img
+        class="col"
+        src="https://i.imgur.com/t8YeaGV.png"
+        alt="Kaleidoscope"
+      />
     </div>
-    <div class="col">
-      <img src="https://i.imgur.com/zfOPmnI.jpeg" alt="Bird" />
+    <div>
+      <img class="col" src="https://i.imgur.com/zfOPmnI.jpeg" alt="Bird" />
     </div>
   </div>
 </body>
