--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,117 +1,108 @@
 body {
-    background-color: rgba(255, 146, 12, 0.975);
-    font-family: 'Mochiy Pop One', sans-serif;
+  background-color: rgba(255, 146, 12, 0.975);
+  font-family: "Mochiy Pop One", sans-serif;
 }
 
-.login-form-box, .signup-form-box {
-    display: flexbox;
-    align-content: center;
-    border-style: inset;
-    width: 50%;
-    margin-left: 25%;
-    padding: 40px;
-    padding-right: 30px;
-    margin-top: 30px;
-    margin-bottom: 5%;
-    background-color: white;
-    border-radius: 8px;
+.login-form-box,
+.signup-form-box {
+  display: flexbox;
+  align-content: center;
+  border-style: inset;
+  width: 50%;
+  margin-left: 25%;
+  padding: 40px;
+  padding-right: 30px;
+  margin-top: 30px;
+  margin-bottom: 5%;
+  background-color: white;
+  border-radius: 8px;
 }
 
 .btn-default {
-    background-color: rgb(21, 195, 169);
-    color:aliceblue;
+  background-color: rgb(21, 195, 169);
+  color: aliceblue;
 }
 
 .form-label {
-    overflow: visible;
-    position:relative;
+  overflow: visible;
+  position: relative;
 }
 
 .title-text {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 6%;
-    margin-bottom: 5%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 6%;
+  margin-bottom: 5%;
 }
 
 #title {
-    font-family: 'Mochiy Pop One', sans-serif;
-    font-size: 45px;
+  font-family: "Mochiy Pop One", sans-serif;
+  font-size: 45px;
 }
 
-
 #signup-text {
-    margin-left: 25%;
-    font-size: 20px;
+  margin-left: 25%;
+  font-size: 20px;
 }
 
 #login-text {
-    margin-left: 25%;
-    font-size: 20px;
+  margin-left: 25%;
+  font-size: 20px;
 }
 
 .logo {
-    margin-top: 5%;
-    margin-bottom: 3%;
-    margin-left: 5%;
-    zoom: 240%;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  margin-left: 5%;
+  zoom: 240%;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .user-profile {
-    margin-left: 6%;
-    background-color: aliceblue;
-    width: 60%;
-    padding: 16px;
-    padding-left: 20px;
-    padding-right: 55px;
-    border-radius: 8px;
+  margin-left: 6%;
+  background-color: aliceblue;
+  width: 60%;
+  padding: 16px;
+  padding-left: 20px;
+  padding-right: 55px;
+  border-radius: 8px;
 }
 
 .btn-warning {
-    margin-left: 36%;
-    margin-top: 70%;
+  margin-left: 36%;
+  margin-top: 70%;
 }
 
 .photo-upload {
-    margin-top: 3%;
-    margin-left: 6%;
-    width: 60%;
+  margin-top: 3%;
+  margin-left: 6%;
+  width: 60%;
 }
 
 .form-label {
-    font-size: 20px;
-    margin-bottom: 10px;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .align-items-center {
-    margin-right: 5%;
-    margin-left: 3%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
+  margin-right: 5%;
+  margin-left: 3%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
 }
 .align-items-center {
-    flex: 1 1 160px;
+  flex: 1 1 160px;
 }
 
 .col {
-    margin: 3%;
-    background-color: aliceblue;
-    padding: 10%;
-    border-radius: 8px;
-    border-style: inset;
-    width: 27%;
-    height: 27%;
-};
-
-
-
-
-
-
+  margin: 3%;
+  padding: 10%;
+  border-radius: 8px;
+  border-style: inset;
+}
