image styling updated

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,20 +89,36 @@ header {
   margin-bottom: 10px;
 }
 
-.align-items-center {
-  margin-right: 5%;
-  margin-left: 3%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row-reverse;
-}
-.align-items-center {
-  flex: 1 1 160px;
+img {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+    padding: 5%;
 }
 
+.align-items-center {
+  /* margin-right: 5%;
+  margin-left: 3%; */
+  display: flex;
+  margin-right: 3%;
+  margin-left: 3%;
+  margin-top: 3%;
+}
+
+.img1 { flex: 0.7826; }
+.img2 { flex: calc(100% * 1.75); }
+.img3 { flex: calc(100% * 1.75); }
+.img4 { flex: calc(100% * 1.75); }
+.img5 { flex: calc(100% * 1.75); }
+.img6 { flex: calc(100% * 1.75); }
+.img7 { flex: calc(100% * 1.75); }
+
+/* .align-items-center {
+  flex: 1 1 160px;
+} */
+/* 
 .col {
   margin: 3%;
   padding: 10%;
-  border-radius: 8px;
-  border-style: inset;
-}
+  max-width: 30%;
+} */
