--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,35 +10,32 @@
     <input class="form-control" type="file" id="formFileDisabled" disabled />
   </div>
   <div class="row align-items-center">
-    <div>
-      <img class="col" src="https://i.imgur.com/CG1DxZd.jpeg" alt="Squirrel" />
+    <div class="img1">
+      <img src="https://i.imgur.com/CG1DxZd.jpeg" alt="Squirrel" />
     </div>
-    <div>
+    <div class="img2" >
       <img
-        class="col"
         src="https://i.imgur.com/Q4SV0zU.jpeg"
         alt="Aspen leaves"
       />
     </div>
-    <div>
-      <img class="col" src="https://i.imgur.com/A8eQsll.jpeg" alt="Dog" />
+    <div class="img3">
+      <img src="https://i.imgur.com/A8eQsll.jpeg" alt="Dog" />
     </div>
-    <div>
+    <div class="img4">
       <img
-        class="col"
         src="https://i.imgur.com/oPXo3kl.jpeg"
         alt="Sloth hanging from tree branch"
       />
     </div>
-    <div>
+    <div class="img5">
       <img
-        class="col"
         src="https://i.imgur.com/t8YeaGV.png"
         alt="Kaleidoscope"
       />
     </div>
-    <div>
-      <img class="col" src="https://i.imgur.com/zfOPmnI.jpeg" alt="Bird" />
+    <div class="img7">
+      <img src="https://i.imgur.com/zfOPmnI.jpeg" alt="Bird" />
     </div>
   </div>
 </body>
