worked on cloudinary

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
 </div>
 <div class="row align-items-center">
     <div class="col">
-      <img src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach">
+      <img class= "pic" src="../assets/images/01-squirrel.jpg" alt="Squirrel eating peach">
     </div>
     <div class="col">
       <img src="../assets/images/02-aspen-leaves.jpg" alt="Aspen leaves">
